--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ p{
     color: purple;
 }
 body{
-    background-image: url("../images/nuclear.jpg");
+   color: lightcyan
     /* background-color: burlywood; */
 }
 h1{
