color change again

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,8 @@ p{
     color: purple;
 }
 body{
-   color: lightcyan
-    /* background-color: burlywood; */
+   /* color: lightcyan */
+    background-color: burlywood;
 }
 h1{
 color:pink;
